--- a/example/two-column.html
+++ b/example/two-column.html
@@ -55,6 +55,7 @@
 
         <div id="footer">
             <p>Footer</p>
+            events are printed out in the browser console, using console.log.
             <div class="log-container logger"></div>
         </div>
     </div>
