--- a/example/two-column.html
+++ b/example/two-column.html
@@ -61,7 +61,7 @@
     </div>
 
     <script src="jquery.js"></script>
-    <script src="_tics.min.js"></script>
+    <script src="..\_tics.min.js"></script>
 	<script src="_tics.fake.js"></script>
     <script>
     	(function ($) {
