Example code updates

--- a/example/two-column.html
+++ b/example/two-column.html
@@ -122,7 +122,7 @@
 	            _tics.events();
 
                 // add your custom event
-                _tics.customEvent('select', 'focus');
+                _tics.customEvent('select', 'blur');
 	        });
 		}(jQuery));
     </script>
