--- a/tests/testrunner-release.html
+++ b/tests/testrunner-release.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>QUnit Test Suite for _tics.js</title>
 	<link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css" type="text/css" media="screen">
 	<script type="text/javascript" src="../node_modules/qunitjs/qunit/qunit.js"></script>
