--- a/tests/testrunner-release.html
+++ b/tests/testrunner-release.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css" type="text/css" media="screen">
 	<script type="text/javascript" src="../node_modules/qunitjs/qunit/qunit.js"></script>
 
-	<script type="text/javascript" src="../release/_tics.min.js"></script>
+	<script type="text/javascript" src="../_tics.min.js"></script>
 
 </head>
 <body>
