GitHub Issue #2: fixes
Bug fixes for GitHub issue #2

--- a/tests/testrunner-release.html
+++ b/tests/testrunner-release.html
@@ -21,6 +21,7 @@
 	<script src="calls.js"></script>
 	<script src="interceptor.js"></script>
 	<script src="_tics.tests.js"></script>
+	<script src="_tics.helper.tests.js"></script>
 
 </body>
 </html>
