refactored unit tests

--- a/tests/testrunner-release.html
+++ b/tests/testrunner-release.html
@@ -15,11 +15,9 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<ol id="qunit-tests"></ol>
-	
+
 	<script src="testHelper.js"></script>
-	<script src="logger.js"></script>
-	<script src="calls.js"></script>
-	<script src="interceptor.js"></script>
+	<script src="interceptor.min.js"></script>
 	<script src="_tics.tests.js"></script>
 	<script src="_tics.helper.tests.js"></script>
 
