corrected paths to javascript files in the example html files

--- a/example/two-column.html
+++ b/example/two-column.html
@@ -46,7 +46,7 @@
                 <label for="field-like-js">Likes JavaScript</label><br />
                 <select id="field-like-js" name="field-like-js">
                     <option value="yes">Yes</option>
-                    <option value="no">No</option> 
+                    <option value="no">No</option>
                 </select>
 
             </p>
@@ -68,7 +68,7 @@
     </div>
 
     <script src="jquery.js"></script>
-    <script src="..\_tics.min.js"></script>
+    <script src="/_tics.min.js"></script>
 	<script src="_tics.fake.js"></script>
     <script>
     /*global _tics: true */
@@ -92,7 +92,7 @@
 	        $(document).ready(function () {
 	            // this demo decorates the elements using JavaScript instead of adding attributes in the html code.
                 decorateElements();
-	            
+
                 disableExampleLinksForThisDemo();
 
 	            // this example use a fake implementation of the Google Analytics script,
