--- a/example/two-column-with-css-no-data-attributes.html
+++ b/example/two-column-with-css-no-data-attributes.html
@@ -46,7 +46,7 @@
                 <label for="field-like-js">Likes JavaScript</label><br />
                 <select id="field-like-js" name="field-like-js">
                     <option value="yes">Yes</option>
-                    <option value="no">No</option> 
+                    <option value="no">No</option>
                 </select>
 
             </p>
@@ -68,8 +68,8 @@
     </div>
 
     <script src="jquery.js"></script>
-    <script src="..\_tics.min.js"></script>
-    <script src="..\add-ons\_tics.cms.js"></script>
+    <script src="/_tics.min.js"></script>
+    <script src="/add-ons/_tics.cms.js"></script>
 	<script src="_tics.fake.js"></script>
     <script>
     /*global _tics: true */
@@ -93,7 +93,7 @@
 	        $(document).ready(function () {
 	            // this demo decorates the elements using JavaScript instead of adding attributes in the html code.
                 decorateElements();
-	            
+
                 disableExampleLinksForThisDemo();
 
                 _tics.cms.prepareForm();
