--- a/example/two-column-with-css-no-data-attributes.html
+++ b/example/two-column-with-css-no-data-attributes.html
@@ -68,8 +68,8 @@
     </div>
 
     <script src="jquery.js"></script>
-    <script src="/_tics.min.js"></script>
-    <script src="/add-ons/_tics.cms.js"></script>
+    <script src="/build/_tics.min.js"></script>
+    <script src="/src/add-ons/_tics.cms.js"></script>
 	<script src="_tics.fake.js"></script>
     <script>
     /*global _tics: true */
