--- a/example/two-column.html
+++ b/example/two-column.html
@@ -68,7 +68,7 @@
     </div>
 
     <script src="jquery.js"></script>
-    <script src="/_tics.min.js"></script>
+    <script src="/build/_tics.min.js"></script>
 	<script src="_tics.fake.js"></script>
     <script>
     /*global _tics: true */
