fixed path errors in unit test runners

--- a/tests/runners/testrunner-release.html
+++ b/tests/runners/testrunner-release.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8" />
 	<title>QUnit Test Suite for _tics.js</title>
-	<link rel="stylesheet" href="/node_modules/qunitjs/qunit/qunit.css" type="text/css" media="screen">
-	<script type="text/javascript" src="/node_modules/qunitjs/qunit/qunit.js"></script>
+	<link rel="stylesheet" href="../../node_modules/qunitjs/qunit/qunit.css" type="text/css" media="screen">
+	<script type="text/javascript" src="../../node_modules/qunitjs/qunit/qunit.js"></script>
 
-	<script type="text/javascript" src="/build/_tics.min.js"></script>
+	<script type="text/javascript" src="../../build/_tics.min.js"></script>
 
 </head>
 <body>
@@ -16,10 +16,10 @@
 	<h2 id="qunit-userAgent"></h2>
 	<ol id="qunit-tests"></ol>
 
-	<script src="lib/testHelper.js"></script>
-	<script src="lib/interceptor.min.js"></script>
-	<script src="_tics.tests.js"></script>
-	<script src="_tics.helper.tests.js"></script>
+	<script src="../lib/testHelper.js"></script>
+	<script src="../lib/interceptor.min.js"></script>
+	<script src="../_tics.tests.js"></script>
+	<script src="../_tics.helper.tests.js"></script>
 
 </body>
 </html>
